modify index file

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body class="home" id="homePage">
     <div class="wrapper">
-        <div class="header">
+        <!-- <div class="header">
             <div class="header-inner wrapper">
                 <div class="logo ">
                     <p>ITGEEKS</p>
@@ -34,7 +34,7 @@
                     <button onclick="darkMode()" class="uppercases">MODE</button>
                 </div>
             </div>
-        </div>
+        </div> -->
         <div class="main">
             <div class="user-input" id="upt">
                 <div class="heading">
@@ -49,7 +49,7 @@
                     <button onclick="bold()" class="uppercases">BOLD</button>
                     <button onclick="colour()" class="uppercases">COLOUR</button>
                     <button onclick="capital()" class="uppercases">CAPITAL</button>
-                    <a href="http://127.0.0.1:5502/index.html" class="ennchor">RESET</a>
+                    <a href="https://rohanvermaitg.github.io/javascript-project/" class="ennchor">RESET</a>
                 </div>
 
 
